--- a/flightinfosystem/templates/flightinfosystem/board_list.html
+++ b/flightinfosystem/templates/flightinfosystem/board_list.html
@@ -19,7 +19,7 @@
                 <td>{{ board.fullname }}</td>
                 <td>{{ board.shortname }}</td>
                 <td><a href="{% url 'fids:boardgate' board.id%}">{{ board.num }}</a></td>
-            {% if board.checkinfly %}
+            {% if board.boardfly %}
                 <td>{{ board.boardfly.timestartboard|time:"H:i" }}</td>
                 <td>{{ board.boardfly.timestopboard|time:"H:i" }}</td>
                 <td>{{ board.boardfly }}</td>
