--- a/flightinfosystem/templates/flightinfosystem/index.html
+++ b/flightinfosystem/templates/flightinfosystem/index.html
@@ -5,10 +5,10 @@
     <title>FIDS</title>
 </head>
 <body>
-<h4><a href="/fids/">Список рейсов.</a></h4>
-<h4><a href="/fids/checkin/">Список стоек регистрации</a></h4>
+<h4><a href="/fids/flights">Список текущих рейсов.</a></h4>
+<h4><a href="/fids/checkins/">Список стоек регистрации</a></h4>
 <h4><a href="/fids/boards/">Список выходов.</a></h4>
-
+<h4><a href="/fids/arhive">Список всех рейсов.</a></h4>
 
 </body>
 </html>
