isg and delete flight

--- a/flightinfosystem/templates/flightinfosystem/board-select.html
+++ b/flightinfosystem/templates/flightinfosystem/board-select.html
@@ -34,7 +34,7 @@
                 <td> {{ flight.timestopcheckin|time:"H:i" }}</td>
                 <td> {{ flight.timestartboard|time:"H:i" }}</td>
                 <td> {{ flight.statecheckin }}</td>
-                <td> {% if flight.isboardclose %}Закрыта {% else %} Не начиналось {% endif %}</td>
+                <td> {{ flight.stateboard }}</td>
             </tr>
             {% empty %}
             <tr>
