--- a/flightinfosystem/templates/flightinfosystem/tablocheckinempty.html
+++ b/flightinfosystem/templates/flightinfosystem/tablocheckinempty.html
@@ -73,7 +73,7 @@
                     <td>Нет регистрации</td>
                 </tr>
                 <tr>
-                    <td><img src="{% static "flightinfosystem/biglogo/iraero-rd.jpg" %}"></td>
+                    <td><img src="{% static "flightinfosystem/../../media/flightinfosystem/biglogo/iraero-rd.jpg" %}"></td>
                 </tr>
             </table>
 
