--- a/flightinfosystem/templates/flightinfosystem/tablodeparture.html
+++ b/flightinfosystem/templates/flightinfosystem/tablodeparture.html
@@ -100,8 +100,8 @@
     </tr>
     {% for flight in flights %}
 	<TR class="content">
-      <TD WIDTH=120 ><img src="" width="100px" height="50px" style="border-radius: 5px;"></TD>
-      <TD WIDTH=120 class="fly" BGCOLOR="#f7f21a" style="border-radius: 5px;">{{ flight.fly }}</TD>
+      <TD WIDTH=110 ><img src="{{ flight.getsmalogo }}" width="100px" height="50px" style="border-radius: 5px;"></TD>
+      <TD WIDTH=110 class="fly" BGCOLOR="#f7f21a" style="border-radius: 5px;">{{ flight.fly }}</TD>
       <TD WIDTH=410>{{ flight.portdist }}</TD>
 	  <TD WIDTH=90 >{{ flight.timeplan|date:"SHORT_DATE_FORMAT" }}</TD>
       <TD WIDTH=90 >{{ flight.timeplan|time:"H:i" }}</TD>
@@ -112,8 +112,8 @@
                     {% if flight.fly ==  keyfly %}
                         {% for reis in sharelist %}
                         <TR class="content">
-                        <TD WIDTH=120 ><img src="" width="100px" height="50px" style="border-radius: 5px;"></TD>
-                        <TD WIDTH=120 class="fly" BGCOLOR="#f7f21a" style="border-radius: 5px;">{{ reis }}</TD>
+                        <TD WIDTH=110 ><img src="{{ airline.reis }}" width="100px" height="50px" style="border-radius: 5px;"></TD>
+                        <TD WIDTH=110 class="fly" BGCOLOR="#f7f21a" style="border-radius: 5px;">{{ reis }}</TD>
                         <TD WIDTH=410>{{ flight.portdist }}</TD>
 	                    <TD WIDTH=90 >{{ flight.timeplan|date:"SHORT_DATE_FORMAT" }}</TD>
                         <TD WIDTH=90 >{{ flight.timeplan|time:"H:i" }}</TD>
