--- a/flightinfosystem/templates/flightinfosystem/tabloarrival.html
+++ b/flightinfosystem/templates/flightinfosystem/tabloarrival.html
@@ -74,7 +74,7 @@
     <table>
         <tr>
             <td>{% now "SHORT_DATE_FORMAT" %}</td>
-            <td rowspan="2"><span class="main">ТАБЛО ВЫЛЕТА<br>DEPARTURE</span></td>
+            <td rowspan="2"><span class="main">ТАБЛО ПРИЛЕТА<br>ARRIVAL</span></td>
         </tr>
         <tr>
             <td>{% now "H:i" %}</td>
@@ -93,7 +93,7 @@
 <TABLE>
     <tr>
             <th colspan="2">Рейс<br>fly</th>
-            <th>Пункт назначения<br>destination</th>
+            <th>Пункт отправления<br>point of departure</th>
             <th>Дата<br>data</th>
             <th>Время<br>time</th>
             <th>Статус<br>status</th>
