--- a/flightinfosystem/templates/flightinfosystem/spravki.html
+++ b/flightinfosystem/templates/flightinfosystem/spravki.html
@@ -45,6 +45,9 @@
                 <td>{{ flight.stateflight }}</td>
 
             </tr>
+            {% if flight.iscodshare %}
+                <tr><td colspan="9">Есть совмещенные рейсы {{ flight.listcodshare }}</td> </tr>
+            {% endif %}
         {% empty %}
             <tr>
                 <td colspan="9">Список рейсов давно не обновлялся</td>
