ready version fix tablo

--- a/flightinfosystem/templates/flightinfosystem/tabloboardempty.html
+++ b/flightinfosystem/templates/flightinfosystem/tabloboardempty.html
@@ -57,12 +57,12 @@
         <div class="heighheader">
             <table>
             <tr>
-                <td width="40%">Стойка регистрации</td>
+                <td width="40%">Выход на посадку</td>
                 <td rowspan="2" width="40%"><span class="num"> № {{ check.num }}</span></td>
                 <td>{% now "SHORT_DATE_FORMAT" %}</td>
             </tr>
             <tr>
-                <td>Check-in</td>
+                <td>Boarding</td>
                 <td>{% now "TIME_FORMAT" %}</td>
             </tr>
             </table>
@@ -70,7 +70,7 @@
         <div class="image">
             <table class="image">
                 <tr>
-                    <td>Нет регистрации</td>
+                    <td>Нет посадки</td>
                 </tr>
                 <tr>
                     <td><img src=""></td>
