--- a/flightinfosystem/templates/flightinfosystem/tablocheckinfly.html
+++ b/flightinfosystem/templates/flightinfosystem/tablocheckinfly.html
@@ -80,7 +80,7 @@
         <div class="logo">
         <table>
             <tr>
-                <td rowspan="2"><img src="{% static "flightinfosystem/../../media/flightinfosystem/biglogo/iraero-rd.jpg" %}" width="430px" height="270px"></td>
+                <td rowspan="2"><img src="{{ flight.getbiglogo }}" width="430px" height="270px"></td>
                 <td colspan="2">{{ check.classcheckin }}</td>
             </tr>
             <tr>
