--- a/flightinfosystem/templates/flightinfosystem/tablodeparture.html
+++ b/flightinfosystem/templates/flightinfosystem/tablodeparture.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+   <meta http-equiv="Refresh" content="60" />
 <style>
    html
    { overflow:  hidden; }
